test_suite/tests/ui/malformed/rename.stderr
error: malformed rename attribute, expected `rename(serialize = ..., deserialize = ...)`
 --> $DIR/rename.rs:6:20
  |
6 |     #[serde(rename(unknown))]
  |                    ^^^^^^^

error: aborting due to previous error

